--- a/theAPIAwakens/Base.lproj/Main.storyboard
+++ b/theAPIAwakens/Base.lproj/Main.storyboard
@@ -17,12 +17,33 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RpE-6F-ewX">
+                                <rect key="frame" x="107" y="418" width="200" height="60"/>
+                                <color key="backgroundColor" red="0.344119966" green="0.58548295500000003" blue="0.56190145020000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Lqx-kC-MgR"/>
+                                    <constraint firstAttribute="height" constant="60" id="Sp4-XD-HAa"/>
+                                </constraints>
+                                <state key="normal" title="Picker Simulator">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="pickedCharacter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="60m-8L-yna"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="RpE-6F-ewX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="VY2-9s-9WH"/>
+                            <constraint firstItem="RpE-6F-ewX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gCe-Da-3hz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="135.9375"/>
         </scene>
     </scenes>
 </document>
